--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,3 +1,11 @@
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #303030;
+  color: white;
+  font-size: 30px;
+}
+
 .main {
   text-align: center;
   display: flex;
