--- a/reactapp/src/components/Models/UploadForm.css
+++ b/reactapp/src/components/Models/UploadForm.css
@@ -43,3 +43,11 @@ input[type=text] {
     border: none;
     background: #f1f1f1;
   }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: none;
+}
