--- a/reactapp/src/components/Models/Browser.css
+++ b/reactapp/src/components/Models/Browser.css
@@ -3,9 +3,43 @@
     background-size: 20px;
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
-    width: 100%; /* Full-width */
+    width: 93%; /* Full-width */
     font-size: 16px; /* Increase font-size */
     padding: 12px 20px 12px 40px; /* Add some padding */
     border: 1px solid #ddd; /* Add a grey border */
     margin-bottom: 12px; /* Add some space below the input */
   }
+
+.headerContainer{
+  border-style: none
+}
+
+.modelListContainer {
+  width: 100%;
+
+}
+
+.modelContainer {
+  width:100%;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.subModelContainer {
+  width:100%;
+  border-style: solid;
+  border-color: rgb(34, 34, 34);
+  background-color: rgb(236, 236, 236);
+  border-radius: 15px;
+  border-width: 2px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 50px;
+  cursor: pointer;
+}
+
+p {
+  margin-left: 10px;
+  margin-top: -1px;
+  margin-bottom: -1px;
+}
