--- a/reactapp/src/components/MenuBar/MenuBar.css
+++ b/reactapp/src/components/MenuBar/MenuBar.css
@@ -1,22 +1,26 @@
 .tab {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 1px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 1px;
 }
 
 .tablink {
-    background-color: #303030;
-    color: rgb(255, 255, 255);
-    float: left;
-    border: rgb(190, 189, 189);
-    outline: rgb(190, 189, 189);
-    cursor: pointer;
-    padding: 14px 16px;
-    font-size: 17px;
-    width: 20%;
+  background-color: #303030;
+  color: rgb(255, 255, 255);
+  float: left;
+  border: rgb(190, 189, 189);
+  outline: rgb(190, 189, 189);
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 16%;
   }
 
-  .tablink:hover {
-    background-color: rgb(73, 72, 72);
-  }
+/* .button {
+  font-size: 5px;
+} */
+
+.tablink:hover {
+  background-color: rgb(73, 72, 72);
+}
