--- a/reactapp/src/components/MenuBar/MenuBar.css
+++ b/reactapp/src/components/MenuBar/MenuBar.css
@@ -35,7 +35,7 @@
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: aqua;
 }
 
 /* Dropdown content (hidden by default) */
