--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -6,29 +6,7 @@
   font-size: 30px;
 }
 
-.main {
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  background-color: #f2f1f5;
-  height: 100vh;
- }
- .card {
-  min-height: 50vh;
-  width: 50vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
- }
- .form {
-  height: 20vh;
-  width: 20vw;
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
- }
- .button {
-  width: 20vw;
-  height: 5vh;
- }
+.page-container {
+  margin-left: 15%;
+  margin-right: 15%;
+}
