--- a/reactapp/src/components/browsers/model.css
+++ b/reactapp/src/components/browsers/model.css
@@ -1,45 +1,89 @@
+.headerContainer {
+  width: 100%;
+  padding-bottom: 5px;
+  padding-top: 30px;
+  /* margin:auto; */
+}
+
+.resultContainer {
+  width: 45%;
+  float: left;
+  padding-top: 5px;
+  padding-left: 0px;
+}
+
+.dataSampleContainer {
+  width: 47%;
+  float: right;
+  padding-top: 5px;
+  padding-right: 0px;
+}
+
 #myInput {
     background-image: url('./images/search_icon.png'); /* Add a search icon to input */
     background-size: 20px;
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
-    width: 93%; /* Full-width */
+    float: centre;
+    width: 100%; /* Full-width */
     font-size: 16px; /* Increase font-size */
-    padding: 12px 20px 12px 40px; /* Add some padding */
+    padding-top: 13px;
+    padding-bottom: 13px;
+    padding-left: 40px;
+    padding-right: -300px;
     border: 1px solid #ddd; /* Add a grey border */
     margin-bottom: 12px; /* Add some space below the input */
   }
 
-.headerContainer{
-  border-style: none
+.loadingCell p {
+  text-align: center;
 }
 
-.modelListContainer {
-  width: 100%;
-
-}
 
 .modelContainer {
-  width:100%;
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.subModelContainer {
   width:100%;
   border-style: solid;
   border-color: rgb(34, 34, 34);
   background-color: rgb(236, 236, 236);
   border-radius: 15px;
   border-width: 2px;
-  padding-top: 7px;
+  padding-top: 0px;
   padding-bottom: 7px;
   padding-right: 50px;
-  cursor: pointer;
+  margin-bottom: 5px;
 }
 
-p {
+.modelContainer p {
   margin-left: 10px;
-  margin-top: -1px;
-  margin-bottom: -1px;
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
+
+.moreInfoButton {
+  cursor:pointer;
+  background-color: aqua;
+  padding: 1px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.modelInfo {
+  /* text-align: center; */
+  width:100%;
+  height: 700px;
+  border-style: solid;
+  border-color: rgb(34, 34, 34);
+  background-color: rgb(248, 248, 248);
+  border-radius: 15px;
+  border-width: 2px;
+}
+
+.modelInfo h3 {
+  text-align: center;
+}
+
+.modelInfo p {
+  padding-left: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
