--- a/reactapp/src/components/forms/user.css
+++ b/reactapp/src/components/forms/user.css
@@ -1,14 +1,14 @@
 .container {
-    padding-left: 250px;
-    padding-right:250px;
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-left: 50px;
+    padding-right:50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 
     /* border-style: solid;
     border-color: #b1b1b1; */
 }
 
-.subContainer {
+.sub-container {
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 15px;
