more styling and create job form

--- a/reactapp/src/components/forms/dataset.css
+++ b/reactapp/src/components/forms/dataset.css
@@ -1,6 +1,6 @@
 .container {
-    padding-left: 50px;
-    padding-right:50px;
+    margin-left: 150px;
+    margin-right:150px;
     padding-top: 30px;
     padding-bottom: 30px;
 
