--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,5 +1,6 @@
 .header {
-  padding: 60px;
+  padding: 40px;
+  height: 130px;
   text-align: center;
   background: #303030;
   color: white;
@@ -7,6 +8,6 @@
 }
 
 .page-container {
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 20%;
+  margin-right: 20%;
 }
