--- a/reactapp/src/components/browsers/dataset.css
+++ b/reactapp/src/components/browsers/dataset.css
@@ -5,6 +5,10 @@
   /* margin:auto; */
 }
 
+.searchBarContainer {
+  width: 100%;
+}
+
 .resultContainer {
   width: 45%;
   float: left;
@@ -20,17 +24,15 @@
 }
 
 #myInput {
-    background-image: url('./images/search_icon.png'); /* Add a search icon to input */
+    background-image: url('./images/search_icon.png'); /*Add a search icon to input*/
     background-size: 20px;
     background-position: 10px 12px; /* Position the search icon */
     background-repeat: no-repeat; /* Do not repeat the icon image */
-    float: centre;
-    width: 100%; /* Full-width */
+    width: 96%; /* Full-width */
     font-size: 16px; /* Increase font-size */
     padding-top: 13px;
-    padding-bottom: 13px;
     padding-left: 40px;
-    padding-right: -300px;
+    padding-bottom: 13px;
     border: 1px solid #ddd; /* Add a grey border */
     margin-bottom: 12px; /* Add some space below the input */
   }
@@ -49,7 +51,7 @@
   border-width: 2px;
   padding-top: 0px;
   padding-bottom: 7px;
-  padding-right: 50px;
+  padding-right: 20px;
   margin-bottom: 5px;
 }
 
