--- a/reactapp/src/components/job.css
+++ b/reactapp/src/components/job.css
@@ -1,14 +1,14 @@
 .container {
-    margin-left: 150px;
-    margin-right:150px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-left: 50px;
+    padding-right:50px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 
     /* border-style: solid;
     border-color: #b1b1b1; */
 }
 
-.sub-container {
+.subContainer {
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 15px;
@@ -44,10 +44,5 @@ input[type=text] {
     background: #f1f1f1;
   }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
-  border: none;
-}
+.leakyrelu{display: block;}
+.relu{display: none;}
