--- a/reactapp/src/components/browsers/job.css
+++ b/reactapp/src/components/browsers/job.css
@@ -69,6 +69,23 @@
   border-radius: 5px;
 }
 
+.startJobButton {
+  cursor:pointer;
+  background-color: firebrick;
+  padding: 1px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.withdrawFundsButton {
+  cursor:pointer;
+  background-color: cornflowerblue;
+  padding: 1px;
+  position: relative;
+  border-radius: 5px;
+}
+
+
 #jobButton {
   cursor:pointer;
   float: right;
