--- a/reactapp/src/components/browsers/job.css
+++ b/reactapp/src/components/browsers/job.css
@@ -69,6 +69,14 @@
   border-radius: 5px;
 }
 
+.addAllowListButton{
+  cursor:pointer;
+  background-color: forestgreen;
+  padding: 1px;
+  position: relative;
+  border-radius: 5px;
+}
+
 .startJobButton {
   cursor:pointer;
   background-color: firebrick;
@@ -76,6 +84,7 @@
   position: relative;
   border-radius: 5px;
 }
+
 
 .withdrawFundsButton {
   cursor:pointer;
@@ -107,7 +116,7 @@
 .jobInfo {
   /* text-align: center; */
   width:100%;
-  height: 700px;
+  height: 1000px;
   border-style: solid;
   border-color: rgb(34, 34, 34);
   background-color: rgb(248, 248, 248);
@@ -120,7 +129,8 @@
 }
 
 .jobInfo p {
-  padding-left: 10px;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  width:80%;
+  padding-left: 8px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
