--- a/reactapp/src/components/browsers/job.css
+++ b/reactapp/src/components/browsers/job.css
@@ -79,7 +79,7 @@
 
 .startJobButton {
   cursor:pointer;
-  background-color: firebrick;
+  background-color: limegreen;
   padding: 1px;
   position: relative;
   border-radius: 5px;
@@ -87,6 +87,14 @@
 
 
 .withdrawFundsButton {
+  cursor:pointer;
+  background-color: darkorange;
+  padding: 1px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.downloadModelButton {
   cursor:pointer;
   background-color: cornflowerblue;
   padding: 1px;
