--- a/reactapp/src/components/forms/job.css
+++ b/reactapp/src/components/forms/job.css
@@ -3,6 +3,7 @@
     padding-right:1px;
     padding-top: 1px;
     padding-bottom: 1px;
+    width: 70%;
 
     /* border-style: solid;
     border-color: #b1b1b1; */
