--- a/reactapp/src/components/forms/model.css
+++ b/reactapp/src/components/forms/model.css
@@ -34,15 +34,31 @@ hr {
     opacity: 0.9;
 }
 
+
 input[type=text] {
     width: 100%;
-    padding-top: 13px;
-    padding-bottom: 13px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     margin: 5px 0 22px 0;
-    display: inline-block;
+    /* display: inline-block; */
     border: none;
     background: #f1f1f1;
   }
+
+input {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin: 5px 0 22px 0;
+}
+
+textArea {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+  height: 180px;
+  border: none;
+  background: #f1f1f1;
+}
 
 .center {
   display: flex;
