implemented how a failed job ends

--- a/reactapp/src/components/browsers/job.css
+++ b/reactapp/src/components/browsers/job.css
@@ -107,6 +107,14 @@
   border-radius: 5px;
 }
 
+.endFailedJobButton {
+  cursor:pointer;
+  background-color: firebrick;
+  padding: 1px;
+  position: relative;
+  border-radius: 5px;
+}
+
 
 #jobButton {
   cursor:pointer;
